# GasAgent

./: .env.example  .gitignore  DOCKER_QUICKSTART.md  GOOGLE_CALENDAR_INTEGRATION.md  PARALLEL_EXECUTION_COMPLETE.md  QUICKSTART.md  README.md  docker-build-and-run.sh  docker-compose.yml  start.sh  start_app.sh  stop_app.sh  test_document.txt  test_teaching_lab.sh  verify.sh
.github/workflows/: ci-tamaskovics-zsolt-hf4.yml  ci.mark.bertalan.hf4.yml  szlavi.domonkos.homework04-ci.yml
backend/: Dockerfile  main.py  requirements.txt  test_deepwiki.py
backend/advanced_agents/: README.md  __init__.py  advanced_graph.py  mcp_nodes.py  state.py
backend/domain/: interfaces.py  models.py
backend/infrastructure/: tool_clients.py
backend/rag/: __init__.py  chunking.py  config.py  embeddings.py  ingestion_service.py  models.py  rag_graph.py  rag_nodes.py  retrieval_service.py  vector_store.py
backend/services/: __init__.py  agent.py  agent_toolnode.py  chat_service.py  parallel_execution.py  tools.py  tools_langchain.py
backend/teaching_memory_lab/: README.md  __init__.py  api.py  graph.py  reducers.py  router.py  state.py
docs/: AGENT_LOOP_HU.md  AI_AGENT_4_RETEG_ARCHITEKTURA.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.drawio  ARCHITECTURE_DIAGRAM_MCP_LANGGRAPH.drawio  ARCHITECTURE_DIAGRAM_README.md  DELTA_PROMPT.md  DELTA_PROMPT_LANGGRAPH2.md  DELTA_PROMPT_LANGGRAPH_MEMORY.md  INIT_PROMPT.md  LANGGRAPH_TOOLNODE_GUIDE.md  MCP_SZERVER_HASZNALAT.md  PYDANTIC_HASZNALAT.md  SPECIFICATION.md  TEACHING_MEMORY_LAB_IMPLEMENTATION.md  TEACHING_MEMORY_LAB_IMPLEMENTATION_HU.md
documentation/: MINI_PROJECTS.md
frontend/: index.html  nginx.conf
frontend/src/: App.css  App.tsx  api.ts  types.ts
mini_projects/andras.szanyi/: GEMINI.md  README.md
mini_projects/benke.tibor/: .env.example  Dockerfile.qdrant  Dockerfile.redis  INSTALLATION.md  README.md  README_DEPLOY.md  docker-compose.yml  prometheus.yml  promtail-config.yml  render.yaml  temp_3.md  (+2 more)
mini_projects/jozsef.csaba/: Dockerfile  MIGRATION.md  Makefile  QUICKSTART.md  README.md  demo.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
mini_projects/jozsef.csaba/app/: __init__.py  main.py
mini_projects/jozsef.csaba/app/api/: routes.py
mini_projects/jozsef.csaba/app/core/: config.py  dependencies.py
mini_projects/jozsef.csaba/app/models/: __init__.py  schemas.py
mini_projects/jozsef.csaba/app/services/: __init__.py  draft_generator.py  embeddings.py  intent_detection.py  jira.py  policy_checker.py  retrieval.py  scheduler.py  triage.py
mini_projects/jozsef.csaba/app/utils/: __init__.py  vector_store.py
mini_projects/jozsef.csaba/app/workflows/: __init__.py  langgraph_workflow.py
mini_projects/jozsef.csaba/backend/: pyproject.toml
mini_projects/jozsef.csaba/backend/app/api/: chat.py
mini_projects/jozsef.csaba/backend/app/rag/: chain.py  prompts.py  query_expansion.py
mini_projects/jozsef.csaba/backend/app/schemas/: chat.py
mini_projects/jozsef.csaba/backend/app/tests/: test_chat_contract.py  test_fakes.py  test_query_expansion.py
mini_projects/jozsef.csaba/scripts/: init_kb.py
mini_projects/jozsef.csaba/tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_vector_store.py
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/: README.md  pyproject.toml
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/data/hr/: vacations_policy.md
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/data/it/: printers.md  vpn_issues.md
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/documentation/: project_requirement.md
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/src/: main.py
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/src/core/: conversation_session.py  document_processor.py  knowledge_base_loader.py  markdown_chunker.py  rag_engine.py
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/src/infrastructure/: openai_gateway.py  vector_store.py
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/src/infrastructure/tools/: __init__.py  exchange_rates.py  holidays.py  jira.py  slack.py  tool_executor.py
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/src/presentation/: cli_interface.py  display_writer_interface.py
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/src/workflows/: __init__.py  knowledge_workflow.py  state.py
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/src/workflows/nodes/: __init__.py  generate_node.py  retrieve_node.py  router_node.py  tool_node.py
mini_projects/jozsef.gulyas/AI.Internal.Knowledge.Router.and.Workflow.Automation.Agent/tests/: conftest.py  test_document_processor.py  test_exchange_rates.py  test_holidays.py  test_jira.py  test_openai_gateway.py  test_rag_engine.py  test_slack.py  test_tool_executor.py  test_vector_store.py
mini_projects/kiss.daniel/3. házi feladat/: .env.example  CHANGELOG.md  README.md  debug_run.py  for-homework-agent.md  prompt.md  pyproject.toml  pytest.ini  requirements.txt  test_direct.py  test_full_agent.py  test_roglan.py  test_roglan_detailed.py  test_status.py
mini_projects/kiss.daniel/3. házi feladat/front/: README.md  app.js  index.html  styles.css  test.html
mini_projects/kiss.daniel/3. házi feladat/src/: api.py  main.py
mini_projects/kiss.daniel/3. házi feladat/src/agent/: __init__.py  graph.py  graph.py.backup  llm.py  prompts.py  state.py  weather_graph.py
mini_projects/kiss.daniel/3. házi feladat/src/agent/tools/: __init__.py  geocode.py  ip_location.py  time_tool.py  timeparse.py  weather.py
mini_projects/kiss.daniel/3. házi feladat/tests/: README.md  test_agent.py  test_api.py  test_geocode.py  test_weather.py
vector_embeddings/: Dockerfile  README.md  docker-compose.yml
(+1699 files in other folders)
