[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-service-triage-agent"
version = "1.0.0"
description = "AI-powered customer service triage and response agent with RAG"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "ai",
    "customer-service",
    "triage",
    "rag",
    "langchain",
    "langgraph",
    "fastapi",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",

    # LangChain & LangGraph
    "langchain==0.1.4",
    "langchain-openai==0.0.5",
    "langgraph==0.0.20",
    "langchain-community==0.0.16",

    # Vector Store & Embeddings
    "faiss-cpu==1.7.4",
    "numpy==1.26.3",
    "sentence-transformers==2.3.1",

    # OpenAI
    "openai==1.10.0",

    # Utilities
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "black==24.1.1",
    "ruff==0.1.14",
    "rich==13.7.0",
]

test = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
]

all = [
    "customer-service-triage-agent[dev,test]",
]

[project.urls]
Homepage = "https://github.com/yourusername/customer-service-triage-agent"
Repository = "https://github.com/yourusername/customer-service-triage-agent"
Documentation = "https://github.com/yourusername/customer-service-triage-agent#readme"

[project.scripts]
triage-api = "app.main:main"
init-kb = "scripts.init_kb:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require API keys)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
