[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-fastapi-rag-demo"
version = "0.1.0"
description = "Demo RAG chatbot with Streamlit, FastAPI, and FAISS"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "openai>=1.6.0",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

# [project.scripts] TODO: Add CLI scripts if needed, maybe to fire up the frontend and backend together